# tabbyAPI

./: .dockerignore  .gitignore  .ruff.toml  .webui_secret_key  Docker  Dockerfile  README.md  SillyTavern.md  Start.bat  THIRD_PARTY_LICENSES.md  TabbyAPI_Colab_Example.ipynb  api_tokens.yml  api_tokens_sample.yml  args.py  auth.py  config.py  config_sample.yml  config_sample_controlvectors.yml  docker-compose.yml  formatting.bat  formatting.sh  gen_logging.py  generate_openapi.py  generators.py  llm.py  logger.py  main.py  model.py  model_test.py  pyproject.toml  requirements-amd.txt  requirements-colab.txt  requirements-cu118.txt  requirements-dev.txt  requirements-nowheel.txt  requirements.txt  setup.py  start.bat  start.ps1  start.py  (+7 more)
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.md  feature_request.yaml
.github/workflows/: docker-image.yml  pages.yml  pylint.yml  ruff.yml  wiki.yml  yapf.yml
Docker/: Dockerfile  docker-compose.yml
OAI/: utils.py  utils_oai.py
OAI/models/: common.py  completions.py  models.py
OAI/types/: chat_completion.py  common.py  completion.py  completions.py  download.py  lora.py  model.py  models.py  sampler_overrides.py  template.py  token.py
OAI/utils/: completion.py  lora.py  model.py
backends/: base_model_container.py
backends/exllamav2/: control_vectors.py  grammar.py  model.py  types.py  utils.py  version.py  vision.py
backends/exllamav3/: batch_perplexity.py  grammar.py  model.py  sampler.py  utils.py  vision.py
backends/infinity/: model.py
colab/: TabbyAPI_Colab_Example.ipynb
common/: actions.py  args.py  auth.py  concurrency.py  config.py  config_models.py  debug_requests.py  downloader.py  downloaders.py  errors.py  gen_logging.py  generators.py  hardware.py  health.py  image_util.py  logger.py  logits_processors.py  metrics.py  model.py  model_lifecycle.py  model_lifecycle_manager.py  model_utils.py  multimodal.py  networking.py  openai_error.py  optional_dependencies.py  sampling.py  signals.py  tabby_config.py  templating.py  tokenizer_modes.py  transformers_utils.py  utils.py
docker/: .dockerignore  Dockerfile  Dockerfile.cu13  docker-compose.yml
docs/: 01.-Getting-Started.md  02.-Server-options.md  03.-Usage.md  04.-Chat-Completions.md  05.-FAQ.md  06.-Sharing.md  07.-AI-Horde.md  08.-Sampler-Overrides.md  08.-Sampling.md  09.-Community-Projects.md  10.-Tool-Calling.md  11.-LogProb.md  GLM-4.5-Tool-Calling-Implementation.md  Home.md  XML-Tool-Calling-Implementation.md  openapi-oai.yaml
endpoints/: server.py  utils.py
endpoints/Kobold/: router.py
endpoints/Kobold/types/: generation.py  model.py  token.py
endpoints/Kobold/utils/: generation.py
endpoints/OAI/: app.py  embeddings.py  router.py
endpoints/OAI/reasoning/: __init__.py  abs_reasoning_parsers.py  basic_parsers.py  deepseek_r1_reasoning_parser.py  deepseek_v3_reasoning_parser.py  ernie45_reasoning_parser.py  exaone4_reasoning_parser.py  glm4_moe_reasoning_parser.py  gptoss_reasoning_parser.py  granite_reasoning_parser.py  holo2_reasoning_parser.py  hunyuan_a13b_reasoning_parser.py  identity_reasoning_parser.py  kimi_k2_reasoning_parser.py  minimax_m2_reasoning_parser.py  mistral_reasoning_parser.py  olmo3_reasoning_parser.py  qwen3_reasoning_parser.py  seedoss_reasoning_parser.py  step3_reasoning_parser.py  step3p5_reasoning_parser.py
endpoints/OAI/types/: auth.py  chat_completion.py  common.py  completion.py  download.py  embedding.py  logprob.py  lora.py  model.py  sampler_overrides.py  template.py  token.py  tools.py
endpoints/OAI/utils/: chat_completion.py  common_.py  completion.py  embeddings.py  logprob.py  lora.py  model.py  parser_options.py  stream_parser.py  tools.py  xml_tool_processors.py
endpoints/core/: router.py
endpoints/core/types/: auth.py  download.py  health.py  lora.py  model.py  sampler_overrides.py  tags.py  template.py  token.py
endpoints/core/utils/: lora.py  model.py
examples/: TabbyAPI_Colab_Example.ipynb
reference_documents/exllamav3/: LICENSE  MANIFEST.in  README.md  convert.py  requirements.txt  requirements_eval.txt  requirements_examples.txt  setup.py
reference_documents/exllamav3/doc/: convert.md  exl3.md
reference_documents/exllamav3/eval/: compare_q.py  compare_q_exllamav2.py  compare_q_exllamav3.py  compare_q_llamacpp.py  compare_q_transformers.py  humaneval.py  model_diff.py  ppl.py
sampler_overrides/: safe_defaults.yml  sample_preset.yml
tabbyapi/: auth.py  gen_logging.py  generators.py  main.py  utils.py
templates/: README.md  alpaca.jinja  available_templates.yaml  chatml.jinja  chatml_with_headers_tool_calling.jinja  fsport_conversation.py  groq_tool_use_tool_calling.jinja  handle_templates.py  llama3.1_tool_calling.jinja  llama3_fire_function_v2.jinja  llama3_fire_function_v2_tool_calling.jinja  mixtral.jinja
templates/tool_calls/: chatml_with_headers.jinja  hermes3_jitsys.jinja  qwen2.5.jinja  qwen3_coder.jinja  qwen3_thinking.jinja  qwen_qwq_32b.jinja  qwq-32b.jinja
tests/: _common.py  deepseek_vl2_chat_serializer_test.py  exaone4_reasoning_parser_test.py  mistral_reasoning_parser_test.py  mistral_tokenizer_mode_test.py  model_test.py  multimodal_test.py  parser_options_test.py  qwen3_reasoning_parser_test.py  reasoning_parser_registry_test.py  req_completion.py  req_grammar.py  req_harmony.py  req_hy3.py  req_json_schema.py  req_logprob.py  req_long.py  req_tool_calls.py  test_best_of.py  test_chat_completion_logprobs.py  test_completion_response.py  test_context_length_errors.py  test_continue_final_message.py  test_exllamav3_asyncjob.py  test_logprob.py  test_logprob_performance.py  test_logprob_regression.py  test_loop_detect_window.py  test_memory_management.py  test_stream_parser.py  test_template_vars.py  test_token_encode_endpoint.py  test_xml_tool_calls.py  tool_parser_test.py  wheel_test.py
tool_formats/: qwen3.yml
tools/: add_api_key.py  inspect_chat_request.py  replay_chat_request.py
update_scripts/: update_deps.bat  update_deps.sh  update_deps_and_pull.bat  update_deps_and_pull.sh
(+196 files in other folders)
